Fix collaboration right alignment in toolbar

--- a/axelor-front/src/views/form/form.module.scss
+++ b/axelor-front/src/views/form/form.module.scss
@@ -71,6 +71,5 @@
 }
 
 .collaboration {
-  display: flex;
-  justify-content: flex-end;
+  margin-left: auto;
 }
